<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tm"
            android:icon="@mipmap/ic_gps_fixed_black_24dp"
            android:title="@string/menu_trackMe" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_prefs"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/menu_pref" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_info_outline_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_help_outline_black_24dp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
