<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.nuigalway.trackme.fragment.RegisterFragment"
    android:name="fragments.RegisterFragment"
    android:id="@+id/fragment_register">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <TextView android:id="@+id/title_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"
                android:text="@string/title_register"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#000000"/>

            <EditText android:id="@+id/edit_fname"
                android:layout_weight="0.00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname" />

            <EditText android:id="@+id/edit_surname"
                android:layout_weight="0.00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_surname" />

            <EditText android:id="@+id/edit_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />

            <EditText android:id="@+id/edit_username"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username" />

            <EditText android:id="@+id/edit_phno"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phno" />

            <EditText android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />

            <EditText android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_conf_password" />

            <Spinner android:id="@+id/edit_profile_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawSelectorOnTop="true"
                android:entries="@array/profile_types"/>

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:elevation="24dp"
                android:text="@string/button_register"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:id="@+id/lgn_lnk"
                android:clickable="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_login_link"
                android:layout_weight="1.73" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
