<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.nuigalway.trackme.fragment.LoginFragment"
    android:name="fragments.LoginFragment"
    android:id="@+id/fragment_login">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <TextView android:id="@+id/title_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"
                android:text="@string/title_login"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#000000"/>

            <EditText

                android:id="@+id/login_username"
                android:inputType="textEmailAddress"
                android:layout_weight="0.00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username" />

            <EditText

                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />
            <!--Button
                android:id="@+id/login_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_login"/-->

            <Button
                android:id="@+id/login_button"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:elevation="24dp"
                android:text="@string/button_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />


            <TextView
                android:id="@+id/login_reglink"
                android:clickable="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_register_link"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
